revert to older api usage